add copyright notices

--- a/goscope/static/css/highlight.css
+++ b/goscope/static/css/highlight.css
@@ -1,8 +1,8 @@
 /*
-
-Darcula color scheme from the JetBrains family of IDEs
-
-*/
+    License: MIT
+    Authors:
+        - Josep Bigorra (averageflow)
+ */
 
 
 .hljs {
