--- a/goscope/static/css/watcher.css
+++ b/goscope/static/css/watcher.css
@@ -1,3 +1,8 @@
+/*
+    License: MIT
+    Authors:
+        - Josep Bigorra (averageflow)
+ */
 h1, h2, h3 {
     font-family: "Manrope", "sans-serif";
 }
