--- a/goscope/static/css/goscope.css
+++ b/goscope/static/css/goscope.css
@@ -18,23 +18,25 @@ h1, h2, h3 {
     font-family: "Manrope", "sans-serif";
 }
 
+input[type='search'],
+input[type='text'] {
+    outline: none;
+}
+
 body {
-    background: #1c1c1c;
-    color: #fff;
+    background: var(--main-background-color-800);
+    color: var(--main-text-color);
     font-family: "Manrope", "sans-serif";
 }
 
-code {
-    font-family: "Fira Mono", monospace
-}
-
+code,
 .monospaced {
     font-family: "Fira Mono", monospace
 }
 
 .navbar-link {
     text-decoration: none;
-    color: #fff;
+    color: var(--main-text-color);
     border: none;
 }
 
@@ -49,7 +51,7 @@ code {
 }
 
 .custom-td {
-    background: #2B2B2D;
+    background: var(--main-background-color-600);
 }
 
 th {
@@ -57,7 +59,7 @@ th {
 }
 
 .eye-image {
-    fill: #fff;
+    fill: var(--main-text-color);
 }
 
 .eye-image:hover {
@@ -70,7 +72,7 @@ table {
 }
 
 .paginate-button {
-    color: #fff;
+    color: var(--main-text-color);
     border: none;
 }
 
@@ -80,59 +82,59 @@ table {
 }
 
 .tab-button {
-    color: #fff;
+    color: var(--main-text-color);
     border: none;
-    background: #2B2B2D;
+    background: var(--main-background-color-600);
     border-radius: 4px;
 }
 
 .badge-success {
     padding: 4px;
     border-radius: 4px;
-    color: #fff;
+    color: var(--main-text-color);
     background-color: #1f9d55;
 }
 
 .badge-info {
     padding: 4px;
     border-radius: 4px;
-    color: #fff;
+    color: var(--main-text-color);
     background-color: #1c3d5a;
 }
 
 .badge-turq {
     padding: 4px;
     border-radius: 4px;
-    color: #fff;
+    color: var(--main-text-color);
     background-color: #503194;
 }
 
 .badge-secondary {
     border-radius: 4px;
     padding: 4px;
-    color: #fff;
+    color: var(--main-text-color);
     background-color: #494444;
 }
 
 .badge-danger {
     border-radius: 4px;
     padding: 4px;
-    color: #fff;
+    color: var(--main-text-color);
     background-color: #621b18;
 }
 
 .badge-warning {
     border-radius: 4px;
     padding: 4px;
-    color: #fff;
+    color: var(--main-text-color);
     background-color: #684f1d;
 }
 
 .search-input {
-    background: #232323;
-    color: #fff;
+    background: var(--main-background-color-700);
+    color: var(--main-text-color);
     border-radius: 8px;
-    border-color: #454545;
+    border-color: var(--main-background-color-400);
 }
 
 /* -----
@@ -145,7 +147,7 @@ SVG Icons - svgicons.sparkk.fr
 }
 
 .svg-icon {
-    fill: #fff;
+    fill: var(--main-text-color);
 }
 
 .svg-icon:hover {
@@ -153,6 +155,6 @@ SVG Icons - svgicons.sparkk.fr
 }
 
 .svg-icon circle {
-    stroke: #ffffff;
+    stroke: var(--main-text-color);
     stroke-width: 1;
 }
