--- a/static/old/css/goscope.css
+++ b/static/old/css/goscope.css
@@ -64,7 +64,13 @@ table {
 	border-spacing: 2px;
 	border-collapse: separate;
 }
+.custom-td {
+	background: #2b2b2d;
+}
 
+th {
+	border-radius: 4px;
+}
 .paginate-button {
 	color: #fff;
 	border: none;
@@ -170,7 +176,17 @@ SVG Icons - svgicons.sparkk.fr
 	line-height: 1.6em;
 	margin: 0 auto;
 }
+table {
+	border-spacing: 2px;
+	border-collapse: separate;
+}
+.custom-td {
+	background: #2b2b2d;
+}
 
+th {
+	border-radius: 4px;
+}
 @media only screen and (max-width: 900px) {
 	.navbar-container h3 {
 		font-size: medium;
