Minor improvements, fix table

--- a/static/goscope/src/app/navbar/navbar.component.html
+++ b/static/goscope/src/app/navbar/navbar.component.html
@@ -31,13 +31,9 @@
   </nav>
 
   <a
-    id="sysinfo-link"
     class="navbar-link"
-    href="/goscope/info"
-    target="_blank"
-    rel="noopener noreferrer"
+    routerLink="/goscope/info"
   >
-    <h3 class="flex">
       <svg class="svg-icon" viewBox="0 0 20 20">
         <path
           id="sysinfo-symbol"
@@ -45,7 +41,6 @@
         ></path>
       </svg>
       System
-    </h3>
   </a>
   <input
     placeholder="Search ..."
