Fix position of details

--- a/static/goscope/src/app/request-details/request-details.component.html
+++ b/static/goscope/src/app/request-details/request-details.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="request">
-  <h2>Log Details</h2>
+  <h2>Request Details</h2>
   <div><span>id: </span>{{request.uid}}</div>
   <div><span>time: </span>{{request.time}}</div>
   <div><span>method: </span>{{request.method}}</div>
