Added the requests module

--- a/static/goscope/src/app/request/request-list/request-list.component.html
+++ b/static/goscope/src/app/request/request-list/request-list.component.html
@@ -15,6 +15,6 @@
     </span>
     </td>
   </tr>
-  <app-request-details [request]="selectedRequest"></app-request-details>
+  <request-request-details [request]="selectedRequest"></request-request-details>
 </table>
 
