--- a/static/goscope/src/app/request/request-details/request-details.component.html
+++ b/static/goscope/src/app/request/request-details/request-details.component.html
@@ -1,6 +1,1 @@
-<div *ngIf="request">
-  <h2>Request Details</h2>
-  <div><span>id: </span>{{request.uid}}</div>
-  <div><span>time: </span>{{request.time}}</div>
-  <div><span>method: </span>{{request.method}}</div>
-</div>
+<p>Request details</p>
