--- a/static/goscope/src/app/request/request-list/request-list.component.scss
+++ b/static/goscope/src/app/request/request-list/request-list.component.scss
@@ -1,3 +1,5 @@
+$main-highlight-color: #7cc3bf;
+
 .goscope-entries-table {
 	min-width: 70%;
 	max-width: 85%;
@@ -16,3 +18,52 @@ table {
 th {
 	border-radius: 4px;
 }
+.badge-success {
+	padding: 4px;
+	border-radius: 4px;
+	color: #fff;
+	background-color: #1f9d55;
+}
+
+.badge-info {
+	padding: 4px;
+	border-radius: 4px;
+	color: #fff;
+	background-color: #1c3d5a;
+}
+
+.badge-turq {
+	padding: 4px;
+	border-radius: 4px;
+	color: #fff;
+	background-color: #503194;
+}
+
+.badge-secondary {
+	border-radius: 4px;
+	padding: 4px;
+	color: #fff;
+	background-color: #494444;
+}
+
+.badge-danger {
+	border-radius: 4px;
+	padding: 4px;
+	color: #fff;
+	background-color: #621b18;
+}
+
+.badge-warning {
+	border-radius: 4px;
+	padding: 4px;
+	color: #fff;
+	background-color: #684f1d;
+}
+
+.eye-image {
+fill: #fff;
+}
+.eye-image:hover {
+fill: $main-highlight-color;
+}
+
