--- a/static/goscope/src/app/request/request-list/request-list.component.html
+++ b/static/goscope/src/app/request/request-list/request-list.component.html
@@ -1,4 +1,4 @@
-<table class="goscope-entries-table">
+<table class="goscope-entries-table p-2">
   <tr>
     <th class="custom-td">Status</th>
     <th class="custom-td">Verb</th>
@@ -8,17 +8,17 @@
   </tr>
 
   <tr *ngFor="let request of requests" class="text-center">
-    <td class="p-3 custom-td">{{request.responseStatus}}</td>
-    <td class="monospaced p-3 custom-td">{{request.method}}</td>
+    <td class="p-3 custom-td" [innerHTML]="applyStatusColor(request.responseStatus)"></td>
+    <td class="monospaced p-3 custom-td" [innerHTML]="applyMethodColor(request.method)"></td>
     <td class="p-3 custom-td">{{request.path}}</td>
-    <td class="p-3 custom-td">{{request.time}}</td>
+    <td class="p-3 custom-td">{{timeDiffToHuman(this.now - request.time)}} ago</td>
     <td class="p-3 custom-td">
       <a routerLink="/requests/{{request.uid}}" class="cursor-pointer">
-      View
-    </a>
+        <svg class="eye-image" style="width:1.2em;height:1.2em;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22 16">
+          <path d="M16.56 13.66a8 8 0 0 1-11.32 0L.3 8.7a1 1 0 0 1 0-1.42l4.95-4.95a8 8 0 0 1 11.32 0l4.95 4.95a1 1 0 0 1 0 1.42l-4.95 4.95-.01.01zm-9.9-1.42a6 6 0 0 0 8.48 0L19.38 8l-4.24-4.24a6 6 0 0 0-8.48 0L2.4 8l4.25 4.24h.01zM10.9 12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0-2a2 2 0 1 0 0-4 2 2 0 0 0 0 4z">
+          </path>
+        </svg>
+      </a>
     </td>
-
   </tr>
-
 </table>
-<router-outlet></router-outlet>
