SPA coming close to completion

--- a/static/goscope/src/app/request/request-details/request-details.component.html
+++ b/static/goscope/src/app/request/request-details/request-details.component.html
@@ -1,5 +1,5 @@
 <div class="container p-3 m-3">
-  <span class="cursor-pointer" (click)="goBack()">← Back</span><br/>
+  <span class="cursor-pointer navbar-link" (click)="goBack()">← Back</span><br/>
   <h2>Request details</h2>
 
   <p>Client IP</p>
