--- a/static/goscope/src/app/app.component.html
+++ b/static/goscope/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
-
-<router-outlet></router-outlet>
+<div [@myAnimation]="o.isActivated ? o.activatedRoute : ''">
+  <router-outlet #o="outlet"></router-outlet>
+</div>
 
 <app-footer></app-footer>
