--- a/static/goscope/src/app/request/request-details/request-details.component.scss
+++ b/static/goscope/src/app/request/request-details/request-details.component.scss
@@ -19,3 +19,7 @@ $main-highlight-color: #7cc3bf;
 	text-decoration: underline;
 	color: $main-highlight-color;
 }
+
+.detailed-view {
+  line-height: 2.0em;
+}
