Replace css with water css

--- a/static/goscope/src/app/footer/footer.component.html
+++ b/static/goscope/src/app/footer/footer.component.html
@@ -1,5 +1,4 @@
-<br /><br />
-<div class="m-6 text-center">
+<footer>
   <p>
     Made with ❤️ and hosted on
     <a
@@ -10,4 +9,4 @@
     >GitHub</a
     >
   </p>
-</div>
+</footer>
