--- a/static/goscope/src/styles.scss
+++ b/static/goscope/src/styles.scss
@@ -1,1 +1,57 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~highlight.js/styles/darcula.css';
+
+$main-highlight-color: #7cc3bf;
+
+code {
+  font-family: 'Fira Mono', monospace;
+}
+
+.badge-success {
+  padding: 4px;
+  border-radius: 4px;
+  color: #fff;
+  background-color: #1f9d55;
+}
+
+.badge-info {
+  padding: 4px;
+  border-radius: 4px;
+  color: #fff;
+  background-color: #1c3d5a;
+}
+
+.badge-turq {
+  padding: 4px;
+  border-radius: 4px;
+  color: #fff;
+  background-color: #503194;
+}
+
+.badge-secondary {
+  border-radius: 4px;
+  padding: 4px;
+  color: #fff;
+  background-color: #494444;
+}
+
+.badge-danger {
+  border-radius: 4px;
+  padding: 4px;
+  color: #fff;
+  background-color: #621b18;
+}
+
+.badge-warning {
+  border-radius: 4px;
+  padding: 4px;
+  color: #fff;
+  background-color: #684f1d;
+}
+
+.eye-image {
+  fill: #fff;
+}
+.eye-image:hover {
+  fill: $main-highlight-color;
+}
