Add light version & fix alignment

--- a/static/goscope/src/app/navbar/navbar.component.html
+++ b/static/goscope/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
         - Josep Bigorra (averageflow)
 -->
 <header>
-  <nav style="padding-bottom: 16px">
+  <nav style="padding-bottom: 16px" ar>
     <a routerLink="/">
       <svg class="svg-icon" viewBox="0 0 20 20">
         <path
