--- a/static/goscope/src/app/request/request-list/request-list.component.html
+++ b/static/goscope/src/app/request/request-list/request-list.component.html
@@ -10,7 +10,7 @@
   />
   <button (click)="searchButtonPressed()" id="search-button" style="float:left; display: flex">
     <svg
-      class="eye-image svg-icon"
+      class="svg-icon"
       style="width: 1.2em; height: 1.2em;"
       viewBox="0 0 20 20"
     >
@@ -20,7 +20,7 @@
     </svg>
   </button>
   <button (click)="cancelSearchButtonPressed()" id="search-cancel-button" style="float: left; display: none;">
-    <svg style="width: 1.2em; height: 1.2em;" class="eye-image svg-icon" viewBox="0 0 20 20">
+    <svg style="width: 1.2em; height: 1.2em;" class="svg-icon" viewBox="0 0 20 20">
       <path
         d="M15.898,4.045c-0.271-0.272-0.713-0.272-0.986,0l-4.71,4.711L5.493,4.045c-0.272-0.272-0.714-0.272-0.986,0s-0.272,0.714,0,0.986l4.709,4.711l-4.71,4.711c-0.272,0.271-0.272,0.713,0,0.986c0.136,0.136,0.314,0.203,0.492,0.203c0.179,0,0.357-0.067,0.493-0.203l4.711-4.711l4.71,4.711c0.137,0.136,0.314,0.203,0.494,0.203c0.178,0,0.355-0.067,0.492-0.203c0.273-0.273,0.273-0.715,0-0.986l-4.711-4.711l4.711-4.711C16.172,4.759,16.172,4.317,15.898,4.045z"
       ></path>
@@ -44,8 +44,8 @@
       <td>{{request.path}}</td>
       <td>{{timeDiffToHuman(this.now - request.time)}} ago</td>
       <td>
-        <a routerLink="/requests/{{request.uid}}">
-          <svg class="eye-image" style="width:1.2em;height:1.2em;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22 16">
+        <a routerLink="/requests/{{request.uid}}" style="float: right">
+          <svg class="svg-icon" style="width:1.2em;height:1.2em;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22 16">
             <path
               d="M16.56 13.66a8 8 0 0 1-11.32 0L.3 8.7a1 1 0 0 1 0-1.42l4.95-4.95a8 8 0 0 1 11.32 0l4.95 4.95a1 1 0 0 1 0 1.42l-4.95 4.95-.01.01zm-9.9-1.42a6 6 0 0 0 8.48 0L19.38 8l-4.24-4.24a6 6 0 0 0-8.48 0L2.4 8l4.25 4.24h.01zM10.9 12a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0-2a2 2 0 1 0 0-4 2 2 0 0 0 0 4z">
             </path>
@@ -55,7 +55,7 @@
     </tr>
   </tbody>
 </table>
-<nav>
+<nav class="text-center">
   <button (click)="previousPage()">← prev</button>
   <button (click)="nextPage()">next →</button>
 </nav>
