--- a/static/goscope/src/app/app.component.html
+++ b/static/goscope/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div [@myAnimation]="o.isActivated ? o.activatedRoute : ''">
+<div role="main" [@myAnimation]="o.isActivated ? o.activatedRoute : ''">
   <router-outlet #o="outlet"></router-outlet>
 </div>
 
