--- a/static/goscope/src/app/navbar/navbar.component.scss
+++ b/static/goscope/src/app/navbar/navbar.component.scss
@@ -4,9 +4,55 @@
         - Josep Bigorra (averageflow)
  */
 
-
-
 .svg-icon {
 	width: 1em;
 	height: 1em;
+}
+
+#logo {
+  height: 1.2em;
+  margin-right: 5px;
+  transform: scale(2);
+}
+
+header {
+  margin-top: -20px;
+
+  nav {
+    margin-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    background-color: var(--background);
+    border-radius: 0 0 6px 6px;
+
+    > a {
+      text-decoration: none !important;
+      border-bottom-style: solid;
+      border-bottom-color: transparent;
+      border-bottom-width: 2px;
+      padding-bottom: 8px;
+      padding-top: 10px;
+      padding-left: 5px;
+      padding-right: 5px;
+      display: inline-block;
+      color: var(--form-text);
+
+      &:not([href="/"]) {
+        &:hover {
+          background-color: var(--button-hover);
+          border-bottom-color: var(--button-links);
+        }
+        &:active,
+        &[active],
+        &.active {
+          color: var(--links);
+          border-bottom-color: var(--links);
+        }
+      }
+
+      > .svg-icon {
+        fill: var(--form-text) !important;
+      }
+    }
+  }
 }
